# bitwarden-cli

./: README-centos7.txt
python/: Makefile  README.md
python/bitwarden.egg-info/: requires.txt
python/man/: bitwarden-agent.1  bitwarden-config.1  bitwarden-emtpydb.1  bitwarden-fetch_name.1  bitwarden-fetch_uuid.1  bitwarden-find.1  bitwarden-login.1  bitwarden-logout.1  bitwarden-pull.1  bitwarden-register.1  bitwarden-slab.1  bitwarden-sql.1  bitwarden-status.1  bitwarden.1
rust/: Cargo.toml  Makefile  README.md  a2ps2s1c.bash  bitwarden-cli-dir-layout.txt  deb.md  rpm.md
rust/.rpm/: bitwarden.spec
rust/src/: main.rs
