[package]
name = "bitwarden"
description = "Rust command line client for bitwarden"
version = "0.1.0"
authors = ["Birl.org"]
publish = false
license     = "MIT"
homepage    = "https://github.com/tjyang/binwarden-cli/"
readme      = "README.md"
categories  = ["command-line-utilities"]
keywords    = ["bitwarden", "password"]


[dependencies]
daemonize = "^0.3"
rust-crypto = "^0.2"
rand = "^0.4"
rustc-serialize = "^0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "0.8.5"
rpassword = "2.1.0"
#rouille = { git= "https://github.com/birlorg/rouille"}
tiny_http = "0.6.0"
secstr = "0.3.0"
openssl-sys = "0.9.40"
hmac = "0.7.0"
openssl = { version = "^0.10"}
uuid = { version = "^0.7", features = ["v5"]}
clap = {version = "^2.32", features = ["yaml"]}

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
agent = { path = "/usr/bin/agent" }
